<resources>
    <string name="app_name">one_drop_cruds</string>


    // Strings de registro de Peso
    <string name="title_crud_gly">Glucemia</string>

    <string name="new_crud_gly">Nuevo Registro</string>
    <string name="description_gly">Seguí tus registros de glucemia en el gráfico a continuación</string>

    <string name="history_gly">Historial de registros</string>
    <string name="description_gly_2">Accedé a todos los registros que hiciste. Recordá que podes modificarlos o eliminarlos en el caso de que sea necesario.</string>


    <string name="add_reg_gly">Agregar nuevo registro</string>
    <string name="add_reg_gly_value">Valor de glucemia</string>
    <string name="add_reg_gly_value_placeholder">0.78</string>
    <string name="add_reg_gly_date">Fecha</string>
    <string name="add_reg_gly_notes">Notas</string>
    <string name="add_reg_gly_notes_placeholder">Tome esta muestra 30 minutos despues de desayunar un cafe con leche..</string>
    <string name="add_reg_gly_btn_add">¡Agregar Nuevo Registro!</string>
    <string name="reg_gly">Registros de Glucemia Historicos</string>
    <string name="del_reg_gly">Registros de Glucemia</string>
    <string name="edit_reg_gly">Registros de Glucemia</string>


    <string name="recycler_reg_gly_edit">Edit</string>
    <string name="recycler_reg_gly_delete">Del</string>

    // Strings de registro de Peso
    <string name="title_crud_weight">Masa Corporal</string>
    <string name="add_reg_weight">Agregar Nuevo Registro </string>
    <string name="reg_gly_weight">Registros de peso historicos</string>

    <string name="new_crud_weight">Nuevo Registro</string>
    <string name="description_weight">Seguí tus registros de masa corporal en el gráfico a continuación</string>

    <string name="history_weight">Historial de registros</string>
    <string name="description_weight_2">Accedé a todos los registros que hiciste. Recordá que podes modificarlos o eliminarlos en el caso de que sea necesario.</string>

    <string name="add_reg_weight_date">Fecha</string>
    <string name="add_reg_weight_value">Valor de Peso</string>
    <string name="add_reg_weight_value_placeholder">70</string>
    <string name="add_reg_weight_notes">Notas</string>
    <string name="add_reg_weight_notes_placeholder">Tome esta muestra 30 minutos despues de desayunar un cafe con leche..</string>



    // Strings de registro de Presion
    <string name="title_crud_pressure">Presion Arterial</string>
    <string name="add_reg_pressure">Agregar Nuevo Registro </string>
    <string name="reg_gly_pressure">Registros de Presion Historicos</string>


    <string name="new_crud_pressure">Nuevo Registro</string>
    <string name="description_pressure">Seguí tus registros de presión en el gráfico a continuación</string>

    <string name="history_pressure">Historial de registros</string>
    <string name="description_pressure_2">Accedé a todos los registros que hiciste. Recordá que podes modificarlos o eliminarlos en el caso de que sea necesario.</string>


    <string name="add_reg_pressure_date">Fecha</string>
    <string name="add_reg_pressure_value">Valor de Presion Arterial</string>
    <string name="add_reg_pressure_value_placeholder">11</string>
    <string name="add_reg_pressure_notes">Notas</string>
    <string name="add_reg_pressure_notes_placeholder">Tome esta muestra 30 minutos despues de desayunar un cafe con leche..</string>


    <string name="f_m_title">Ficha medica</string>
    <string name="f_m_last_name">Apellido</string>
    <string name="f_m_name">Nombre</string>
    <string name="f_m_age">Edad</string>
    <string name="f_m_birthday">Fecha de nacimiento</string>
    <string name="f_m_weight">Peso (Kg) </string>
    <string name="f_m_objetivo_glucosa">Objetivo glucosa </string>
    <string name="f_m_comorbilidades">Comorbilidades </string>
    <string name="f_m_type_db">Tipo de diabetes</string>
    <string name="f_m_therapy_db">Terapia de insulina</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>







    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>