<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/layout_edit_reg_weight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/add_reg_weight_date"
            android:textColor="@color/blueonedrop"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_date_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/blackonedrop"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="(Opcional)"
            android:inputType="datetime"
            android:paddingBottom="30dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="30dp"
            android:text="@string/add_reg_weight_value"
            android:textColor="@color/blueonedrop"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_value_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/blackonedrop"
            android:textStyle="bold"
            android:ems="10"
            android:hint="@string/add_reg_weight_value_placeholder"
            android:inputType="numberDecimal"
            android:paddingBottom="30dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingTop="30dp"
            android:text="@string/add_reg_weight_notes"
            android:textColor="@color/blueonedrop"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_notes_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:textColor="@color/blackonedrop"
            android:textStyle="bold"
            android:hint="@string/add_reg_weight_notes_placeholder"
            android:inputType="textMultiLine"
            android:paddingBottom="30dp" />

    </LinearLayout>

</LinearLayout>