<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondodos"
    tools:context=".UserSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="374dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:text="¡Ya casi! Completá tus datos para poder empezar a disfrutar de OneDrop"
                    android:textAlignment="center"
                    android:textColor="@color/blackonedrop"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <EditText
                        android:id="@+id/signup_name"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/lavender_border"
                        android:drawableLeft="@drawable/baseline_how_to_reg_24"
                        android:drawablePadding="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/f_m_last_name"
                        android:padding="8dp"
                        android:textColor="@color/blackonedrop"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/lavender_border"
                        android:drawableLeft="@drawable/baseline_how_to_reg_24"
                        android:drawablePadding="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/f_m_name"
                        android:padding="8dp"
                        android:textColor="@color/blackonedrop"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_age"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/lavender_border"
                        android:drawableLeft="@drawable/baseline_numbers_24"
                        android:drawablePadding="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/f_m_age"
                        android:padding="8dp"
                        android:textColor="@color/blackonedrop"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/lavender_border"
                        android:drawableLeft="@drawable/baseline_cake_24"
                        android:drawablePadding="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/f_m_birthday"
                        android:padding="8dp"
                        android:textColor="@color/blackonedrop"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/signup_weight"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/lavender_border"
                        android:drawableLeft="@drawable/baseline_monitor_weight_24"
                        android:drawablePadding="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/f_m_weight"
                        android:padding="8dp"
                        android:textColor="@color/blackonedrop"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_diabetes_type"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/lavender_border"
                        android:drawableLeft="@drawable/baseline_health_and_safety_24"
                        android:drawablePadding="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/f_m_type_db"
                        android:padding="8dp"
                        android:textColor="@color/blackonedrop"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/signup_diabetes_therapy"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/lavender_border"
                        android:drawableLeft="@drawable/baseline_vaccines_24"
                        android:drawablePadding="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="@string/f_m_therapy_db"
                        android:padding="8dp"
                        android:textColor="@color/blackonedrop"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/signupButton"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/blueonedrop"
                        android:onClick="submitMedicalRecord"
                        android:text="Registrarse"
                        android:textSize="20sp"
                        app:cornerRadius="30dp" />


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>